--- a/admin/template/editFooter.html
+++ b/admin/template/editFooter.html
@@ -11,7 +11,7 @@
 		<div class="form-group">
 			<label for="inputEmail3" class="col-sm-2 control-label hor-form" ng-bind="data.row.wechat_qr_image.wc_name"></label>
 			<div class="col-sm-10">
-				<img width="256" height="256"  src="{{data.front_image_url}}{{data.row.wechat_qr_image.wc_value}}">
+				<img width="200" height="200"  src="/images/webconfig/{{data.row.wechat_qr_image.wc_value}}">
 			</div>
 		</div>
 		<div class="form-group">
@@ -29,7 +29,7 @@
 		<div class="form-group">
 			<label for="inputEmail3" class="col-sm-2 control-label hor-form" ng-bind="data.row.qq_qr_image.wc_name"></label>
 			<div class="col-sm-10">
-				<img width="256" height="256" src="{{data.front_image_url}}{{data.row.qq_qr_image.wc_value}}">
+				<img width="200" height="200" src="/images/webconfig/{{data.row.qq_qr_image.wc_value}}">
 			</div>
 		</div>
 		<div class="form-group">
