--- a/admin/template/announcemeEditForm.html
+++ b/admin/template/announcemeEditForm.html
@@ -29,7 +29,7 @@
 		<div class="form-group">
 			<label for="inputEmail3" class="col-sm-2 control-label hor-form">活动图</label>
 			<div class="col-sm-10">
-				<img src="{{data.front_image_url}}{{data.row.an_image}}" onerror="this.onerror=null;this.src='https://fakeimg.pl/300x175/';">
+				<img src="/images/announcemet/{{data.row.an_image}}" onerror="this.onerror=null;this.src='https://fakeimg.pl/300x175/';">
 			</div>
 		</div>
 		<div class="form-group">
