--- a/admin/template/editBigBanner.html
+++ b/admin/template/editBigBanner.html
@@ -9,7 +9,7 @@
 		<div class="form-group">
 			<label for="inputEmail3" class="col-sm-2 control-label hor-form">首页banner图</label>
 			<div class="col-sm-10">
-				<img src="{{data.front_image_url}}{{data.row.bb_image}}" width="300" height="82" onerror="this.onerror=null;this.src='https://fakeimg.pl/300x82/';">
+				<img src="/images/big_banner/{{data.row.bb_image}}" width="300" height="82">
 			</div>
 		</div>
 		<div class="form-group">
