--- a/admin/template/addAdmin.html
+++ b/admin/template/addAdmin.html
@@ -10,20 +10,20 @@
 	<div class="form-group">
 		<label for="inputEmail3" class="col-sm-2 control-label hor-form">密碼</label>
 		<div class="col-sm-10">
-		  <input type="text" onfocus="this.type='password'"  name="passwd" ng-model="data.passwd" maxlength="12" required="required" class="form-control" placeholder="密碼">
+		  <input type="password"  name="passwd" ng-model="data.passwd" maxlength="12" required="required" class="form-control" placeholder="密碼">
 		</div>
 	</div>
 	<div class="form-group">
 		<label for="inputEmail3" class="col-sm-2 control-label hor-form">在次输入密碼</label>
 		<div class="col-sm-10">
-		  <input type="text"  onfocus="this.type='password'" name="passwd" ng-model="data.passwd_confirm" maxlength="12" required="required" class="form-control" placeholder="密碼">
+		  <input type="password"  name="passwd" ng-model="data.passwd_confirm" maxlength="12" required="required" class="form-control" placeholder="密碼">
 		</div>
 	</div>
 	<div class="form-group">
 		<label for="inputEmail3" class="col-sm-2 control-label hor-form">帐号角色</label>
 		<div class="col-sm-10">
 			<select ng-model="data.role" ng-init="data.role='2'">
-				<option value="{{option.ar_id}}" ng-if="data.role !='1'" ng-repeat = "option in data.options" ng-bind="option.ar_name"></option>
+				<option value="{{option.ar_id}}" ng-if="option.role !='1'" ng-repeat = "option in data.options" ng-bind="option.ar_name"></option>
 			</select>
 		</div>
 	</div>
