--- a/admin/template/addChildUser.html
+++ b/admin/template/addChildUser.html
@@ -17,7 +17,7 @@
 	 <div class="form-group">
 		<label for="inputEmail3" class="col-sm-2 control-label hor-form">密碼</label>
 		<div class="col-sm-10">
-		  <input type="text"  onfocus="this.type='password'" name="passwd" maxlength="12" required="required" class="form-control" placeholder="密碼">
+		  <input type="password"  name="passwd" maxlength="12" required="required" class="form-control" placeholder="密碼">
 		</div>
 	  </div>
 	  <div class="form-group">
