--- a/admin/template/user_list.html
+++ b/admin/template/user_list.html
@@ -6,6 +6,7 @@
 			  <div class="form-group">
 				<label class="sr-only" for="exampleInputPassword3">使用者帳號</label>
 				<input type="text" ng-model="data.search.u_account"  class="form-control" placeholder="使用者帳號">
+				<input type="hidden" ng-model="data.search.superior_id"  ng-init="data.search.superior_id = 0">
 			  </div>
 			  <button type="submit" class="btn btn-default" ng-click="search()">搜寻</button>
 			  <button  class="btn btn-default" ng-click="reset()">清除搜寻条件</button>
@@ -19,6 +20,9 @@
 		<div class="clearfix"> </div>
 		<div class="but_list">
 			<div class="col-md-12 page_1">
+				<span ng-repeat="row in data.user_level_ary" ng-bind="'/'+row.u_account"></span>
+			</div>
+			<div class="col-md-12 page_1">
 				<table class="table table-bordered">
 					<thead>
 						<tr>
@@ -28,28 +32,16 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat-start="row in data.list">
+						<tr ng-repeat="row in data.list">
 							<td valign="middle">
-								<i  ng-click="showChild(row,row.u_id)" ng-show ="row.u_superior_id =='0'>0" class="fa fa-minu" ng-class="row.u_have_child =='0'?'fa-minus':row.show=='false'?'fa-arrow-circle-down':'fa-arrow-circle-up'" aria-hidden="true"></i>
 								{{row.u_account}}
 							</td>
 							<td  valign="middle" ng-if="row.u_superior_id =='0'"  >總代號</td>
 							<td ng-if="row.u_superior_id !='0'"  ng-bind="row.superior_account"></td>
 							<td valign="middle">
-								<a href="/admin/index.php?/Admin/renterTemplates#!/user/list{{action.router}}/{{row.u_id}}"  ng-click="buttonClick(action);" ng-repeat-start="action in data.actions" ng-show="action.type=='button' && action.id !=10" type="button" class="btn btn-xs btn-default" ng-bind="action.title"></a>
+								<a href="/admin/index.php?/Admin/renterTemplates#!/user/list{{action.router}}/{{row.u_id}}"  ng-click="actionClick($event, action, row);" ng-repeat-start="action in data.actions" ng-show="action.type=='button' " type="button" class="btn btn-xs btn-default" ng-bind="action.title"></a>
 								<d ng-repeat-end></d>
 							</td>
-						</tr>
-						<tr ng-repeat="node in row.nodes" ng-show="row.show==true">
-							<td  >
-								<span style="margin-left:20px;color:#999;font-size: 1em;"  ng-bind="node.u_account"></span>
-							</td>
-							<td>下级</td>
-							<td>
-								<a href="/admin/index.php?/Admin/renterTemplates#!/user/list{{action.router}}/{{row.u_id}}" ng-repeat="action in data.actions" ng-show="action.type=='button' && action.id !=9" type="button" class="btn btn-xs btn-default" ng-bind="action.title"></a>
-							</td>
-						</tr>
-						<tr ng-repeat-end class="hidden">
 						</tr>
 					</tbody>
 				</table>  
