--- a/admin/template/user_list.html
+++ b/admin/template/user_list.html
@@ -4,8 +4,8 @@
 		<div class="grid-form1">
 			<form class="form-inline">
 			  <div class="form-group">
-				<label class="sr-only" for="exampleInputPassword3">使用者帳號</label>
-				<input type="text" ng-model="data.search.u_account"  class="form-control" placeholder="使用者帳號">
+				<label class="sr-only" for="exampleInputPassword3">用互帐号</label>
+				<input type="text" ng-model="data.search.u_account"  class="form-control" placeholder="用互帐号">
 				<input type="hidden" ng-model="data.search.superior_id"  ng-init="data.search.superior_id = 0">
 			  </div>
 			  <button type="submit" class="btn btn-default" ng-click="search()">搜寻</button>
@@ -26,7 +26,8 @@
 				<table class="table table-bordered">
 					<thead>
 						<tr>
-							<th width="30%" style="text-align:center" >使用者帳號</th>
+							<th width="10%" style="text-align:center" >用互帐号</th>
+							<th width="10%" style="text-align:center" >用互状态</th>
 							<th width="10%" style="text-align:center">上級</th>
 							<th width="60%" style="text-align:center">功能</th>
 						</tr>
@@ -36,6 +37,7 @@
 							<td valign="middle">
 								{{row.u_account}}
 							</td>
+							<td valign="middle" ng-bind="row.u_is_lock_str"></td>
 							<td  valign="middle" ng-if="row.u_superior_id =='0'"  >總代號</td>
 							<td ng-if="row.u_superior_id !='0'"  ng-bind="row.superior_account"></td>
 							<td valign="middle">
