--- a/css/style.css
+++ b/css/style.css
@@ -1121,6 +1121,8 @@ body header > .nav-container > .container > li a {
   border-radius: 10px;
   min-width: 106px;
   text-align: center;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 body header > .nav-container > .container > li.active a {
@@ -2064,6 +2066,79 @@ body main .sect-notice > .container .row .notice-group .notice-action {
   text-align: right;
 }
 
+body main .sect-app .banner-container img {
+  width: 100%;
+}
+
+body main .sect-app > .title {
+  text-align: center;
+  padding: 30px 0px;
+  font-size: 30px;
+  font-weight: bold;
+  color: #0081cc;
+  background-image: url(../img/app-nav-img1.png);
+  background-position: center;
+  background-size: 100%;
+}
+
+body main .sect-app .download-container {
+  padding: 50px 0px;
+  width: 100%;
+  max-width: 800px;
+  margin: auto;
+  text-align: center;
+}
+
+body main .sect-app .download-container img {
+  width: 100%;
+}
+
+body main .sect-app .download-container .type {
+  font-size: 24px;
+  padding: 10px 0px;
+}
+
+body main .sect-app .download-container .type.android {
+  padding: 27px 0px;
+}
+
+body main .sect-app .download-container .badge {
+  width: 65%;
+}
+
+body main .sect-ckeditor > .container {
+  width: 100%;
+  max-width: 1440px;
+  margin: 20px auto;
+  background-color: #ffffff;
+  border: 1px solid #848588;
+  padding: 50px;
+  border-radius: 5px;
+}
+
+body main .sect-ckeditor > .container .ckeditor-group .topic {
+  font-size: 24px;
+  color: #0080cb;
+}
+
+body main .sect-ckeditor > .container .ckeditor-group .title1 {
+  font-size: 18px;
+  color: #0080cb;
+  margin-top: 20px;
+}
+
+body main .sect-ckeditor > .container .ckeditor-group .title2 {
+  font-size: 16px;
+  color: #f79646;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+body main .sect-ckeditor > .container .ckeditor-group .detail {
+  margin-bottom: 10px;
+  line-height: 1.5;
+}
+
 body footer {
   width: 100%;
   position: absolute;
@@ -2285,7 +2360,7 @@ body .pop-window .pop-cash-password .pop-action {
 
 body .pop-window .pop-register {
   width: 450px;
-  height: 50%;
+  height: 510px;
   background-color: #ffffff;
   border-radius: 5px;
   opacity: 0;
@@ -2353,7 +2428,7 @@ body .pop-window .pop-register .form-group .form-action a {
 
 body .pop-window .pop-service {
   width: 450px;
-  height: 325px;
+  height: 380px;
   background-color: #ffffff;
   border-radius: 5px;
   opacity: 0;
@@ -2376,6 +2451,12 @@ body .pop-window .pop-service > .title {
 
 body .pop-window .pop-service .form-group {
   padding: 20px;
+}
+
+body .pop-window .pop-service .form-group .warning-text {
+  margin-bottom: 15px;
+  padding: 0px 4px;
+  color: #0081cc;
 }
 
 body .pop-window .pop-service .form-group .row {
