--- a/sass/style.scss
+++ b/sass/style.scss
@@ -179,6 +179,8 @@ body {
             border-radius: 10px;
             min-width: 106px;
             text-align: center;
+            font-size: 20px;
+            font-weight: bold;
           }
           &.active {
             a {
@@ -1007,6 +1009,75 @@ body {
         }
       }
     }
+    .sect-app {
+      .banner-container {
+        img {
+          width: 100%;
+        }
+      }
+      >.title {
+        text-align: center;
+        padding: 30px 0px;
+        font-size: 30px;
+        font-weight: bold;
+        color: #0081cc;
+        background-image: url(../img/app-nav-img1.png);
+        background-position: center;
+        background-size: 100%;
+      }
+      .download-container {
+        padding: 50px 0px;
+        width: 100%;
+        max-width: 800px;
+        margin: auto;
+        text-align: center;
+        img {
+          width: 100%;
+        }
+        .type {
+          font-size: 24px;
+          padding: 10px 0px;
+          &.android {
+            padding: 27px 0px;
+          }
+        }
+        .badge {
+          width: 65%;
+        }
+      }
+    }
+    .sect-ckeditor {
+      >.container {
+        width: 100%;
+        max-width: 1440px;
+        margin: 20px auto;
+        background-color: #ffffff;
+        border: 1px solid #848588;
+        padding: 50px;
+        border-radius: 5px;
+        .ckeditor-group {
+          .topic {
+            font-size: 24px;
+            color: #0080cb;
+          }
+          .title1 {
+            font-size: 18px;
+            color: #0080cb;
+            margin-top: 20px;
+          }
+          .title2 {
+            font-size: 16px;
+            color: #f79646;
+            margin-top: 20px;
+            margin-bottom: 10px;
+          }
+          .detail {
+            margin-bottom: 10px;
+            line-height: 1.5;
+          }
+        }
+      }
+    }
   }
   footer {
     width: 100%;
@@ -1194,7 +1265,7 @@ body {
     }
     .pop-register {
       width: 450px;
-      height: 50%;
+      height: 510px;
       background-color: #ffffff;
       border-radius: 5px;
       opacity: 0;
@@ -1250,7 +1321,7 @@ body {
     }
     .pop-service {
       width: 450px;
-      height: 325px;
+      height: 380px;
       background-color: #ffffff;
       border-radius: 5px;
       opacity: 0;
@@ -1268,6 +1339,11 @@ body {
       }
       .form-group {
         padding: 20px;
+        .warning-text {
+          margin-bottom: 15px;
+          padding: 0px 4px;
+          color: #0081cc;
+        }
         .row {
           margin-bottom: 20px;
           padding-left: 75px;
