--- a/admin/template/bankBlackList.html
+++ b/admin/template/bankBlackList.html
@@ -8,7 +8,7 @@
 				时间：<input type="text" ng-model="data.search.start_time" class="form-control datepicker" >~<input type="text" ng-model="data.search.end_time" class="form-control datepicker" >
 			</div>
 			<div class="form-group">
-				银行卡号：<input type="text" ng-model="data.search.ub_account" class="form-control datepicker" >
+				银行卡号：<input type="text" ng-model="data.search.bbl_account" class="form-control" >
 			</div>
 			<div class="form-group">
 				<button type="submit" class="btn btn-default" ng-click="search_click()">搜寻</button>
@@ -28,30 +28,20 @@
 				<table class="table table-bordered">
 					<thead>
 						<tr>
-							<th width="5%" style="text-align:center" >用户号</th>
 							<th width="5%" style="text-align:center" >银行卡号</th>
-							<th width="5%" style="text-align:center" >银行用户名</th>
-							<th width="5%" style="text-align:center" >银行</th>
-							<th width="5%" style="text-align:center" >省份</th>
-							<th width="5%" style="text-align:center" >城市</th>
-							<th width="5%" style="text-align:center" >分行名</th>
+							<th width="5%" style="text-align:center" >添加人</th>
 							<th width="5%"  style="text-align:center">
-								<a href="" ng-click="orderClick('ub_add_datetime');$event.preventDefault();">新增日</a> 
-								<i  ng-show="data.order.ub_add_datetime=='DESC'" class="fa fa-chevron-down" aria-hidden="true"></i>
-								<i  ng-show="data.order.ub_add_datetime=='ASC'"  class="fa fa-chevron-up" aria-hidden="true"></i>
+								<a href="" ng-click="orderClick('bbl_add_datetime');$event.preventDefault();">新增日</a> 
+								<i  ng-show="data.order.bbl_add_datetime=='DESC'" class="fa fa-chevron-down" aria-hidden="true"></i>
+								<i  ng-show="data.order.bbl_add_datetime=='ASC'"  class="fa fa-chevron-up" aria-hidden="true"></i>
 							</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr ng-repeat="row in data.list">
-							<td valign="middle" ng-bind="row.u_account"></td>
-							<td valign="middle" ng-bind="row.ub_account"></td>
-							<td valign="middle" ng-bind="row.ub_account_name"></td>
-							<td valign="middle" ng-bind="row.bi_name"></td>
-							<td valign="middle" ng-bind="row.ub_province"></td>
-							<td valign="middle" ng-bind="row.ub_city"></td>
-							<td valign="middle" ng-bind="row.ub_branch_name"></td>
-							<td valign="middle" ng-bind="row.ub_add_datetime"></td>
+							<td valign="middle" ng-bind="row.bbl_account"></td>
+							<td valign="middle" ng-bind="row.ad_account"></td>
+							<td valign="middle" ng-bind="row.bbl_add_datetime"></td>
 						</tr>
 					</tbody>
 				</table>  
