--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1307,6 +1307,9 @@ body {
             color: red;
             padding-left: 41px;
           }
+          .captcha-container {
+            margin-top: 10px;
+          }
         }
         .form-action {
           text-align: center;
