--- a/css/style.css
+++ b/css/style.css
@@ -2413,6 +2413,10 @@ body .pop-window .pop-register .form-group .row .warning-text {
   padding-left: 41px;
 }
 
+body .pop-window .pop-register .form-group .row .captcha-container {
+  margin-top: 10px;
+}
+
 body .pop-window .pop-register .form-group .form-action {
   text-align: center;
 }
