--- a/font/style.css
+++ b/font/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'live';
-  src:  url('fonts/live.eot?sgzwmr');
-  src:  url('fonts/live.eot?sgzwmr#iefix') format('embedded-opentype'),
-    url('fonts/live.ttf?sgzwmr') format('truetype'),
-    url('fonts/live.woff?sgzwmr') format('woff'),
-    url('fonts/live.svg?sgzwmr#live') format('svg');
+  src:  url('fonts/live.eot?ibhtom');
+  src:  url('fonts/live.eot?ibhtom#iefix') format('embedded-opentype'),
+    url('fonts/live.ttf?ibhtom') format('truetype'),
+    url('fonts/live.woff?ibhtom') format('woff'),
+    url('fonts/live.svg?ibhtom#live') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,12 @@ i {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-key:before {
+  content: "\e98d";
+}
+.icon-menu:before {
+  content: "\e9bd";
+}
 .icon-ic-home:before {
   content: "\e904";
 }
