--- a/admin/template/user_list.html
+++ b/admin/template/user_list.html
@@ -8,7 +8,7 @@
 				<input type="text" ng-model="data.search.u_account"  class="form-control" placeholder="用互帐号">
 				<input type="hidden" ng-model="data.search.superior_id"  ng-init="data.search.superior_id = 0">
 			  </div>
-			  <button type="submit" class="btn btn-default" ng-click="search()">搜寻</button>
+			  <button type="submit" class="btn btn-default" ng-click="click_search()">搜寻</button>
 			  <button  class="btn btn-default" ng-click="reset()">清除搜寻条件</button>
 			</form>
 		</div>
