--- a/Mobile/css/style.css
+++ b/Mobile/css/style.css
@@ -1029,7 +1029,8 @@ body header > .container .login-information .login-before .btn {
 }
 
 body header > .container .login-information .login-after .btn {
-  width: 100%;
+  float: left;
+  width: 50%;
 }
 
 body header > .nav-container {
@@ -1613,12 +1614,18 @@ body main .sect-member-detail > .container .member-detail > .container .row .inp
 }
 
 body main .sect-member-detail > .container .member-detail > .container .row .input-group-container .input-group input[type=text],
+body main .sect-member-detail > .container .member-detail > .container .row .input-group-container .input-group input[type=number],
 body main .sect-member-detail > .container .member-detail > .container .row .input-group-container .input-group input[type=password] {
   width: 100%;
   height: 30px;
   font-size: 18px;
   margin-right: 10px;
   padding: 3px 10px;
+}
+
+body main .sect-member-detail > .container .member-detail > .container .row .input-group-container .input-group > span {
+  display: block;
+  margin-top: 10px;
 }
 
 body main .sect-member-detail > .container .member-detail > .container .row .confirm-group-container {
