--- a/Mobile/sass/style.scss
+++ b/Mobile/sass/style.scss
@@ -104,7 +104,8 @@ body {
         }
         .login-after {
           .btn {
-            width: 100%;
+            float: left;
+            width: 50%;
           }
         }
       }
@@ -605,12 +606,17 @@ body {
                 .input-group {
                   width: 100%;
                   input[type=text],
+                  input[type=number],
                   input[type=password] {
                     width: 100%;
                     height: 30px;
                     font-size: 18px;
                     margin-right: 10px;
                     padding: 3px 10px;
+                  }
+                  >span {
+                    display: block;
+                    margin-top: 10px;
                   }
                 }
               }
