--- a/admin/template/addBlackList.html
+++ b/admin/template/addBlackList.html
@@ -1,5 +1,5 @@
 <input type="hidden"  ng-model="data.setting.search_api" ng-init="data.setting.do_api ='/addBankBlack'">
-<div class="grid_3 grid_4"  ng-init="addAdminInit()">
+<div class="grid_3 grid_4"  >
 	<p>
 	<form class="form-horizontal" method="POST">
 		<div class="form-group">
