--- a/admin/template/bankBlackList.html
+++ b/admin/template/bankBlackList.html
@@ -19,7 +19,7 @@
 	</div>
 	<div class="grid_3 grid_4">
 		<div class="col-md-12 page_1">
-			<a href="/admin/index.php?/Admin/renterTemplates#!/bank{{action.router}}" ng-click="actionClick($event, action.func)" ng-repeat-start="action in data.init.actions" ng-if="action.type =='head_button' " type="button" class="btn btn-lg btn-default" ng-bind="action.title"></a>
+			<a href="/admin/index.php?/Admin/renterTemplates#!/bank{{action.router}}" ng-click="actionClick($event, action)" ng-repeat-start="action in data.init.actions" ng-if="action.type =='head_button' " type="button" class="btn btn-lg btn-default" ng-bind="action.title"></a>
 			<span ng-repeat-end></span>
 		</div>
 		<div class="clearfix"> </div>
